2000-05-28  Michael Yount  <csf@moscow.com>
	* lib/Mj/CommandProps.pm:  Allow faq, info, and intro
	to be used with the GLOBAL and DEFAULT lists.
    
	* lib/Majordomo.pm:
	(_reg_add, _reg_remove) Sort the list names when storing
	    a subscriber's registry data.
	(_password, _request_response) Do not append a domain name to
	    'whoami' and other addresses when substituting; 
	    Mj::Config does this already.
	(get_all_lists)  Return a sorted list of lists.
	(_password)  Allow $VICTIM to be substituted in new_password.
	(_rekey) Skip registration records for which an Mj::Addr could not
	    be created.
	(_unregister) Allow regular expressions to be used with
	    the unregister command.

2000-05-25  Michael Yount  <csf@moscow.com>
	* bin/mj_wwwusr: New prototype of WWW interface for users.
	It currently supports the functionality of lists, faq,
	info, intro, show, set, subscribe, and unsubscribe.

2000-05-24  Michael Yount  <csf@moscow.com>
	* bin/mj_wwwadm, bin/mj_confirm: Add error checks for return
	values from new() and connect().  Untaint domain name.
	(Thanks to Olivier Prenant)

	* bin/mj_wwwadm: Use PATH_INFO to allow a list name to be specified
	in the URL, e.g., http://example.com/cgi-bin/mj_wwwadm/mytestlist.
	Allow '=' to be used to separate command and mode.
	Add the set command to the command menu.
	Add "about this service" entry to the command menu, and supply
	usage instructions if it is utilized.  

	* lib/Mj/Access.pm: add mime_header_length_exceeded to consult_vars.

	* lib/Mj/CommandProps.pm:  change the bytes variable to body_length.
	Add the mime_header_length and mime_header_length_exceeded variables
	to the 'legal' hash for the post command.
 
	* lib/Mj/Resend.pm: set the mime_header_length, body_length,
	and body_length_exceeded variables appropriately.

2000-05-23  Michael Yount  <csf@moscow.com>

	* lib/Mj/Resend.pm (_check_body): Make use of maxlength
	variable to check message body size.
